# CanHost

./: CMakeLists.txt  main.cpp  settings.json
can_proxy/: proxy.c
context/: ScriptContext.cpp  ScriptContext.h  ScriptException.cpp  ScriptException.h  ScriptLine.cpp  ScriptLine.h
hardware/: Card.cpp  Card.h  Channel.cpp  Channel.h  ChannelAlias.cpp  ChannelAlias.h  Device.cpp  Device.h  DeviceClass.cpp  DeviceClass.h  DeviceType.cpp  DeviceType.h  DiscreteInput.cpp  DiscreteInput.h  DiscreteOutput.cpp  DiscreteOutput.h  DiscreteOutputChannel.cpp  DiscreteOutputChannel.h  DiscreteOutputDevice.cpp  DiscreteOutputDevice.h  Module.cpp  Module.h
hid_io/: ZeroMqServer.cpp  ZeroMqServer.h  zmq.hpp
io_pool/: CanBusIO.cpp  CanBusIO.h  CanMessage.cpp  CanMessage.h
logs/: CanHost.INFO  CanHost.log20180315-102030.827  CanHost.log20180315-102427.873  CanHost.log20180315-103518.956  CanHost.log20180315-103632.1007  CanHost.log20180315-103759.1035  CanHost.log20180315-104107.1117  CanHost.log20180315-105419.1188  CanHost.log20180315-105632.1245  CanHost.log20180315-110332.1427  CanHost.log20180315-110930.1458  CanHost.log20180315-111148.1500  CanHost.log20180315-111526.1539  CanHost.log20180315-111618.1565
objects/: README
plugin/: README
scripts/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  g04.cpp  header.h  libCanHostPlugin.dylib  libtestscript.dylib  m0.cpp  testscript.cpp
utils/: Settings.cpp  Settings.h  Utils.cpp  Utils.h
web/: index.html
web/js/: script.js
webserver/: ServerUtility.h  SimpleServer.h  StatusCode.h  WebServer.cpp  WebServer.h
